--- a/style.css
+++ b/style.css
@@ -159,3 +159,36 @@ footer {
     transform: rotate(360deg);
   }
 }
+
+
+@media (max-width: 600px) {
+  header {
+    font-size: 1.5em;
+    padding: 1em;
+  }
+
+  .profile-photo {
+    width: 90%;
+    max-width: 280px;
+  }
+
+  .message {
+    font-size: 1.2em;
+    padding: 1em;
+    margin: 20px auto;
+  }
+
+  #reveal-button {
+    width: 90%;
+    font-size: 1em;
+  }
+
+  .reply-form textarea {
+    width: 90%;
+    font-size: 1em;
+  }
+
+  footer {
+    font-size: 0.9em;
+  }
+}
